# tidaldlx

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
contrib/serato_tags/: README.md  database_v2.py
tidaldlx/: __main__.py  cli.py
tidaldlx/lib/files/: downloader.py  id3.py  track_to_file.py
tidaldlx/lib/tidal/: config.py
tidaldlx/lib/tidal/login/: prompt.py  session.py
tidaldlx/lib/tidal/tracks/: favorites.py  track.py
tidaldlx/lib/tokenstore/: store.py
tidaldlx/lib/ui/: notify.py
